--- a/src/components/layout/Layout.module.css
+++ b/src/components/layout/Layout.module.css
@@ -7,4 +7,5 @@
   flex-direction: column;
   font-size: 0.7rem;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  color: rgb(70, 70, 70);
 }
