--- a/src/components/weatherData/WeatherInfo.module.css
+++ b/src/components/weatherData/WeatherInfo.module.css
@@ -1,31 +1,32 @@
 .container {
   width: 30rem;
+  height: 70%;
   margin: 6rem auto 0 auto;
   position: relative;
   border-radius: 1rem;
-  background-color: rgba(255, 255, 255, 0.3);
-  color: black;
-  padding: 1rem 2rem;
+  background-color: rgb(200, 175, 233);
+  padding: 0 2rem;
   display: grid;
   grid-template-columns: 25% 75%;
-  grid-template-rows: 35% 65%;
+  grid-template-rows: 25% 75%;
 }
 
 .tempContainer {
-  grid: 1;
+  grid-column: 1;
   grid-row: 1;
   display: flex;
 }
 
 .desContainer {
-  grid: 2;
+  grid-column: 2;
   grid-row: 1;
   display: flex;
 }
 
 .historyContainer {
-  grid: 1/3;
+  grid-column: 1/3;
   grid-row: 2;
+  display: flex;
 }
 
 .image {
