--- a/src/components/layout/Layout.module.css
+++ b/src/components/layout/Layout.module.css
@@ -1,8 +1,9 @@
 .background {
-  background-image: url("../../../public/backgroundImage.jpg");
+  background-image: url("../../../public/purple.jpg");
   background-repeat: no-repeat;
   background-size: cover;
-  height: 100vh;
+  height: 100%;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   font-size: 0.7rem;
