--- a/src/components/weatherData/WeatherInfo.module.css
+++ b/src/components/weatherData/WeatherInfo.module.css
@@ -1,13 +1,13 @@
 .container {
-  width: 30rem;
-  height: 70%;
+  width: 36rem;
+  height: 45rem;
   margin: 6rem auto 0 auto;
   position: relative;
   border-radius: 1rem;
-  background-color: rgb(200, 175, 233);
+  background-color: rgba(200, 175, 233, 0.9);
   padding: 0 2rem;
   display: grid;
-  grid-template-columns: 25% 75%;
+  grid-template-columns: 30% 70%;
   grid-template-rows: 25% 75%;
 }
 
@@ -32,5 +32,11 @@
 .image {
   position: absolute;
   top: -4rem;
-  right: -7%;
+  right: -5%;
+}
+
+@media (max-width: 800px) {
+  .container {
+    width: 80%;
+  }
 }
