--- a/src/components/weatherData/description/Description.module.css
+++ b/src/components/weatherData/description/Description.module.css
@@ -7,3 +7,11 @@
   padding: 0.3rem 0;
   color: rgb(136, 136, 136);
 }
+
+@media (max-width: 700px) {
+  .container {
+    flex-direction: column-reverse;
+    align-items: flex-end;
+    line-height: 1.5rem;
+  }
+}
