--- a/src/components/weatherData/history/entries/Entries.module.css
+++ b/src/components/weatherData/history/entries/Entries.module.css
@@ -2,7 +2,7 @@
   display: grid;
   width: 100%;
   background-color: rgb(231, 218, 247);
-  grid-template-columns: 5rem 1fr 2rem 2rem;
+  grid-template-columns: 5rem 1fr 2.5rem 2.5rem;
   border-radius: 0.5rem;
   font-size: 0.7rem;
   padding: 0.5rem;
@@ -27,9 +27,10 @@
   width: 1.5rem;
   height: 1.5rem;
   border-radius: 2rem;
-  margin-left: 0.2rem;
+  margin-left: 0.5rem;
   color: gray;
   cursor: pointer;
+  box-shadow: 0px 0px 4px black;
 }
 
 .subButton:hover {
@@ -44,11 +45,41 @@
   width: 1.5rem;
   height: 1.5rem;
   border-radius: 2rem;
+  margin-left: 0.5rem;
   color: gray;
   cursor: pointer;
+  box-shadow: 0px 0px 4px black;
 }
 
 .delButton:hover {
   background-color: rgb(201, 201, 201);
   transition: all 0.2s ease-in-out;
+}
+
+@media (max-width: 700px) {
+  .list {
+    grid-template-columns: 5fr 1fr 2rem 2rem;
+    grid-template-rows: 1rem 1rem;
+    padding: 0 0.5rem;
+    font-size: 0.6rem;
+  }
+  .city {
+    grid-column: 1;
+    grid-row: 1;
+  }
+  .time {
+    grid-column: 1;
+    grid-row: 2;
+    justify-self: start;
+  }
+  .subButton {
+    grid-column: 3;
+    grid-row: 1/3;
+    align-self: center;
+  }
+  .delButton {
+    grid-column: 4;
+    grid-row: 1/3;
+    align-self: center;
+  }
 }
